# backlot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  start.bat
config/: engine.yaml
docs/: getting-started.md  production-notes.md  relay-protocol.md
examples/: eiffel.py  reel.py  showcase.py  showcase_polish.py
scripts/: bench_banana.py  bench_images.py  cuda_setup.py  live_music.py  live_run.py  make_blender_restyle.py  make_storyboard.py  make_vace_animation.py  make_video_restyle.py  make_wing_texture.py  vace_one_chunk.py  verify_mcp.py
templates/: edit_kontext.api.json  img2vid_svd.api.json  img2vid_wan.api.json  img2vid_wan14b.api.json  img2vid_wan14b_fast.api.json  inpaint_sdxl.api.json  music_acestep.api.json  talkhost_infinitetalk.api.json  talkhost_infinitetalk_multi.api.json  talkhost_sonic.api.json  txt2img_controlnet_depth_sdxl.api.json  txt2img_flux.api.json  txt2img_sdxl.api.json  txt2vid_ltx.api.json  txt2vid_wan.api.json  upscale_esrgan.api.json  vace_depth_video.api.json
tests/: live_phase1.py  live_video.py  make_blender_animation.py  make_butterfly_valley.py  make_minimovie.py  make_music_video.py  make_pip_episode.py  make_source.py  make_talk_scene.py  mm_sfx.py  run_sonic_talkhost.py  run_wan14b_test.py  test_assemble.py  test_assist.py  test_blender.py  test_blender_scenes.py  test_comfy_client.py  test_config.py  test_consistent_video.py  test_director.py  test_faceswap.py  test_inject.py  test_job_manager.py  test_library.py  test_mcp_server.py  test_models.py  test_motionsync.py  test_presets.py  test_qc_rules.py  (+9 more)
(+67 files in other folders)
